<resources>
    <string name="app_name">EduSphere Agent</string>
    <string name="dashboard_title">EduSphere Dashboard</string>
    <string name="status_title">System Status</string>
    <string name="device_info_title">Device Information</string>
    <string name="server_connection">Server Connection:</string>
    <string name="mdm_privilege">MDM Privilege:</string>
    <string name="device_id_label">Device ID:</string>
    <string name="device_model_label">Model:</string>
    <string name="os_version_label">Android Version:</string>
    <string name="force_sync">Force Sync</string>
    
    <string name="status_connected">Connected</string>
    <string name="status_offline">Offline</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Not Configured</string>
    <string name="status_unknown">Unknown</string>
</resources>